--- a/package.json
+++ b/package.json
@@ -35,5 +35,7 @@
     "webpack": "^5.36.2",
     "webpack-stream": "^6.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "swiper": "^6.7.0"
+  }
 }
